adding amqp and implementing request-cart service