@@ -2,9 +2,11 @@ package com.avinho.msavaliadorcredito.application;
 
 import com.avinho.msavaliadorcredito.application.exception.DadosClienteNotFoundException;
 import com.avinho.msavaliadorcredito.application.exception.ErroComunicacaoMicroserviceException;
+import com.avinho.msavaliadorcredito.application.exception.ErroSolicitacaoCartaoException;
 import com.avinho.msavaliadorcredito.domain.model.*;
 import com.avinho.msavaliadorcredito.infra.clients.CartaoResourceClient;
 import com.avinho.msavaliadorcredito.infra.clients.ClienteResourceClient;
+import com.avinho.msavaliadorcredito.infra.clients.mqueue.SolicitacaoEmissaoCartaoPublisher;
 import feign.FeignException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -13,6 +15,7 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,6 +24,7 @@ public class AvaliadorCreditoService {
 
     public final ClienteResourceClient clienteClient;
     public final CartaoResourceClient cartaoClient;
+    private final SolicitacaoEmissaoCartaoPublisher cartaoPublisher;
 
     public SituacaoCliente obterSituacaoCliente(String cpf) throws DadosClienteNotFoundException, ErroComunicacaoMicroserviceException {
         try {
@@ -52,14 +56,14 @@ public class AvaliadorCreditoService {
 
                 Cliente cliente = dadosClienteResponse.getBody();
 
-                BigDecimal limiteBasico = cartao.limite();
+                BigDecimal limiteBasico = cartao.limiteBasico();
                 BigDecimal idadeBD = BigDecimal.valueOf(cliente.idade());
                 var fator = idadeBD.divide(BigDecimal.valueOf(10));
                 BigDecimal limiteAprovado = fator.multiply(limiteBasico);
 
                 CartaoAprovado cartApv = new CartaoAprovado(cartao.nome(), cartao.bandeira(), limiteAprovado);
                 return cartApv;
-            }).toList();
+            }).collect(Collectors.toList());
 
             return RetornoAvaliacaoCliente
                     .builder()
@@ -72,6 +76,16 @@ public class AvaliadorCreditoService {
                 throw new DadosClienteNotFoundException();
             }
             throw new ErroComunicacaoMicroserviceException(e.getMessage(), status);
+        }
+    }
+
+    public ProtocoloSolicitacaoCartao solicitarEmissaoCartao(DadosSolicitacaoEmissaoCartao dados) {
+        try {
+            cartaoPublisher.solicitarCartao(dados);
+            var protocolo = UUID.randomUUID().toString();
+            return new ProtocoloSolicitacaoCartao(protocolo);
+        } catch (Exception e) {
+            throw new ErroSolicitacaoCartaoException(e.getMessage());
         }
     }
 }
